--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,13 +1,25 @@
 {
-  "extends": "airbnb-base",
+  "plugins": ["prettier"],
+  "extends": ["eslint:recommended", "plugin:prettier/recommended"],
   "env": {
     "es6": true,
     "browser": true,
-    "jest": true
+    "jest/globals": true
+  },
+  "parserOptions": {
+    "sourceType": "module",
+    "ecmaVersion": 13
   },
   "rules": {
-    "no-restricted-syntax": ["error", "LabeledStatement", "WithStatement"],
-    "eslint-disable quotes": true,
-    "eslint-disable-next-line": true
-  }
+    "no-unused-vars": 0,
+    "prettier/prettier": 0
+  },
+  "overrides": [
+    {
+      "files": ["**/*.test.js"],
+      "plugins": ["jest"],
+      "extends": ["plugin:jest/recommended"],
+      "rules": { "jest/prefer-expect-assertions": "off" }
+    }
+  ]
 }
