--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "eslint": "^8.27.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-jest": "^27.1.5",
-    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-import": "^2.20.2",
     "html-loader": "^4.2.0",
     "html-webpack-plugin": "^5.5.3",
     "husky": "^8.0.3",
