--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "css-loader": "^6.8.1",
     "eslint": "^8.27.0",
     "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-jest": "^27.1.5",
     "eslint-plugin-import": "^2.20.2",
     "html-loader": "^4.2.0",
